--- a/common.css
+++ b/common.css
@@ -33,7 +33,6 @@ header{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
-    border-bottom:solid thin #707070;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -69,6 +68,70 @@ justify-content: space-around;
     object-fit: cover;
     z-index: -1;
 }
+#testBackground{
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    backdrop-filter:blur(3px);
+    background-color:rgba(0, 0, 0, 0.19) ;
+}
+
+input{
+    text-align: center;
+    border: solid 2px white;
+    background-color: transparent;
+    width: 80%;
+    height: 50px;
+    margin: 10px;
+    transition: background-color .3s
+}
+input:focus{
+    background-color: rgba(255, 255, 255, 0.616);
+}
+
+#logInForm{
+    display: none;
+    left: 0;
+    right: 0;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    background-color:#C8D7E0 ;
+    z-index: 2;
+    margin: 5% auto 15% auto; 
+    border: 1px solid #888;
+    width: 60%; 
+    padding: 30px;
+    animation: animatezoom 0.6s
+}
+
+.defaultBtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #B5CDCC;
+    border-radius: 20px;
+    width: 150px;
+    height: 45px;
+    margin: 5px;
+    color:#707070;
+    font-family: cheap-pine, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 30px;
+    cursor:pointer;
+}
+.defaultBtn:hover{
+    transition:ease-in .2s;
+    background-color: #b5cdccad;
+}
+
+
 
 .mainWrapper{
     display: flex;
@@ -121,6 +184,8 @@ justify-content: space-around;
 .bottomSection{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-image:
     linear-gradient(to top, rgba(255, 255, 255, 0.52),
      rgba(232, 224, 228)),
@@ -130,6 +195,9 @@ justify-content: space-around;
 
 .bottomContent{
     display: flex;
+    align-items: center;
+    flex-direction: column;
+    
 }
 
 footer {
@@ -164,6 +232,13 @@ footer {
     width: 250px;
 }
 
+
+.flexRow{
+    display: flex;
+    flex-direction: row;
+
+}
+
       /* Responsive layout - makes a one column layout instead of a two-column layout */
       @media (max-width: 800px) {
         .discountContainer{
@@ -174,3 +249,4 @@ footer {
             margin-top: 50px;
         }
       }
+
