--- a/common.css
+++ b/common.css
@@ -36,15 +36,19 @@ header{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.brandLogo{
+.brandLogo {
     display: flex;
-    max-width: 170px;
-    height: auto;
+    justify-content: center;
+
 }
 
+
+
+
 .navRight{
-display: flex;
-justify-content: space-around;
+    flex: 0;
+    display: flex;
+    justify-content: space-around;
 }
 
 .myPageBtn{
@@ -197,7 +201,7 @@ input:focus{
     display: flex;
     align-items: center;
     flex-direction: column;
-    
+    margin: 20px;
 }
 
 footer {
