--- a/common.css
+++ b/common.css
@@ -24,19 +24,39 @@ header{
     position: fixed;
     overflow: hidden;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
     padding: 0 50px ;
     left: 0;
     right: 0;
     top: 0;
-    height: 8vh;
-    background-color: #e9d9e0;
     background-image: url(/assets/layout/godisrpsa.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    z-index: 99;
+}
+#headerBottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-self: flex-end;
+    height: 8vh;
+    width: 100%;
+    position: relative;
+    bottom: 0px;
+}
+
+#headerTop {
+    display: none;
+    background-color:chartreuse;
+    justify-content: space-evenly;
+}
+
+.headerBox {
+    display: none;
+    background-color: green;
+    overflow: hidden;
 }
 
 .menu {
@@ -44,21 +64,20 @@ header{
     flex:1 1 auto;
 }
 
-.brandLogo {
+/* .brandLogo {
     display: flex;  
-    justify-content: center;
-    align-items: center;
-    flex: 0.1 1 100px;
+    width: 8vh;
+    height: 8vh;
+
+} */
+
+ .brandLogo > a {
+    text-decoration: none;
 
 }
 
-.brandLogo  img{
-    display: flex;
-    object-fit: cover;
-    max-width:100%;
-    max-height:auto;
-}
 
+ 
 .navRight{
     display: flex;
     flex-direction: row-reverse;
@@ -157,19 +176,17 @@ input:focus{
 .mainWrapper{
     display: flex;
     flex-direction: column;
-    margin-top: 7vh;
-   /*  height: 93vh; */
+/*     margin-top: 7vh;
+ */   /*  height: 93vh; */
 }
 
-.productsWrapper{
+#productWrapper{
     display: flex;
     flex-direction: column;
     /* flex-wrap: wrap; */
-    margin-top: 150px;
     background-color: #BED1D9;
-/*     height: 30vh;
- */    padding-left: 20px;
-   
+    padding-left: 20px;
+    
 }
 
 .productContainer{
@@ -177,6 +194,7 @@ input:focus{
     flex-direction: row;
     align-content: center;
     flex-wrap: wrap;
+    
 }
 
 .productBox {
@@ -205,6 +223,10 @@ input:focus{
 .discountContainer{
     display: flex;
     flex-direction: row;
+    margin-top: 25vh;
+    z-index: 2;
+
+
 }
 
 .discountBox{
@@ -291,6 +313,17 @@ footer {
     flex-direction: row;
 
 }
+
+/* Crate a hidden non clickable div to push anchorlinks to correct position */
+.anchorPoint::before {
+    content: '';
+    display: block;
+    height: 60px;
+    margin: -50px 0 0;
+    z-index: -99;
+}
+
+
 
 
 
