--- a/common.css
+++ b/common.css
@@ -184,6 +184,7 @@ input:focus{
 .productBox {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     width: 25vw;
 /*     height: 40vh;
  */    background-color: white;
@@ -201,8 +202,12 @@ input:focus{
 }
 .productBox > button{
     width: 10vw;
-    margin: 2px;
+    
+    
 }
+/* .fa-shopping-cart{
+    margin: 10px;
+} */
 
 .discountContainer{
     display: flex;
@@ -295,6 +300,53 @@ footer {
 }
 
 
+/* ProductPopupDiv */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    /* overflow: auto; */ /* Enable scroll if needed */
+    backdrop-filter:blur(3px);
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
+}
+.modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    margin:10% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 2px solid black;
+    border-radius: 25px;
+    width: 30vw; /* Could be more or less, depending on screen size */
+    animation: animatezoom 0.6s
+    
+}
+.modal-content >img {
+    object-fit: contain;
+    max-width: 30%;
+    max-height: 30%;
+
+}
+
+
+.close {
+    align-self: flex-end;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 4vh;
+}
+/* BÖR MINSKA DESC I mediaquery  */
+    
+
+
 
       /* Responsive layout - makes a one column layout instead of a two-column layout */
       @media (max-width: 800px) {
@@ -311,6 +363,16 @@ footer {
 
         header{
             padding: 0 25px ;
+        }
+        .productBox {
+            width: 35vw;
+            font-size: xx-small;
+        }
+        .productBox > button{
+            width: 30vw;
+        }
+        .modal-content{
+            width: 70vw;
         }
   
 
