--- a/adminProduct.css
+++ b/adminProduct.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 
-
+/* General styling */
 main {
     display: flex;
     flex-direction: column;
@@ -16,7 +16,7 @@ main {
     display:flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 70vw;
+    max-width: 70vw;
     padding: 10px;
     border: 1px solid black;
 }
@@ -33,13 +33,16 @@ main {
     margin-bottom: 10px;
 } 
 
+table {
+    border: hidden;
+}
 
 textarea {
     resize: none;
-    background-color: red;
+  
 }
 
-
+/* Styling for adminUpdatePanel */
 
 .UpdatePanelProdRow > td {
     padding: 10px;
@@ -70,10 +73,6 @@ textarea {
 
 }
 
-table {
-    border: hidden;
-}
-
 #editPopUpDiv {
     display: flex;
     flex-direction: column;
@@ -89,3 +88,43 @@ table {
 .editPopUpInput, #editPopUpCategory {
     min-height: 5vh;
 }
+
+
+/* Styling for addProductPanel */
+#addProductTabel > tr > td {
+    padding: 0px;
+}
+
+#addProductTabel > tr > td:nth-child(2) {
+    height: 5vh;
+
+}
+#addProductTabel > tr > td:nth-child(1) {
+    font-size: 1.2em;
+    padding-right: 20px;
+
+}
+
+#addProductTabel > tr > td > input, #addProductTabel > tr > td > textarea, #addProductTabel > tr > td > select {
+    width: 100%;
+    height: 100%;
+    
+}
+/* To style uploadButton */
+#adminProductBox > div {
+    display: flex;
+    padding: 20px 10px 10px 10px;
+    width: 100%;
+    justify-content: space-between;
+}
+
+
+
+
+
+
+
+
+
+
+
