--- a/common.css
+++ b/common.css
@@ -184,8 +184,8 @@ input[type="checkbox"]{
     display: flex;
     flex-direction: row;
     margin-top: 25vh;
-    z-index: 2;
-
+/*     z-index: 2;
+ */
 
 }
 
@@ -274,19 +274,10 @@ footer {
 
 }
 
+#anchorProduct {
+/*     scroll-margin-top: 4em; */
+}
 
-
-/* Crate a hidden non clickable div to push anchorlinks to correct position */
-/*   .anchorPoint::before {
-    content: '';
-    display: block;
-    height: 20px;
-    margin: -60px 0 0;
-    z-index: 0;
-    background-color: red;
-} 
- 
- */
 
 
 
