--- a/animations.css
+++ b/animations.css
@@ -86,19 +86,32 @@ header {
     transition: 0.4s;
 
 }
+
+.bar2 {
+  background-color: lightskyblue;
+}
+
+.bar3 {
+  background-color: hotpink;
+}
       
 .change .bar1 {
     -webkit-transform: rotate(-45deg) translate(-9px, 6px);
     transform: rotate(-45deg) translate(-9px, 6px);
+    background-color: #000000;
+
 }
       
 .change .bar2 {
     opacity: 0;
+    
 }
       
 .change .bar3 {
     -webkit-transform: rotate(45deg) translate(-8px, -8px);
     transform: rotate(45deg) translate(-8px, -8px);
+    background-color: #000000;
+
 }
 
 @keyframes animatezoom {
