--- a/common.css
+++ b/common.css
@@ -26,10 +26,10 @@ h1, h2{
 /*     flex: 1 1 auto;
  */}
 
-.navRight i{
+/* .navRight i{
     padding: 0 10px;
 }
-
+ */
 
 
 
@@ -84,13 +84,13 @@ input[type="checkbox"]{
     right: 0;
     align-items: center;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
  
     background-color:#C8D7E0 ;
     z-index: 99;
-    margin: 5% auto 15% auto; 
-    border: 1px solid #888;
-    width: 60%; 
+    margin: 10% auto; 
+/*     border: 1px solid #888;
+ */    width: 60%; 
     padding: 30px;
     animation: animatezoom 0.6s
 }
@@ -306,7 +306,7 @@ footer {
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 10; /* Sit on top */
+    z-index: 99; /* Sit on top */
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -365,6 +365,7 @@ footer {
 
         }#logInForm{
             width: 100%; 
+            
         }
 
         header{
