--- a/common.css
+++ b/common.css
@@ -46,7 +46,7 @@ h1, h2{
     z-index: -1;
 }
 
-#popupBackground{
+#popupBackground, .modal{
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 98; /* Sit on top */
@@ -54,7 +54,7 @@ h1, h2{
     top: 0;
     width: 100%; 
     height: 100%; 
-    overflow: auto; 
+    
     backdrop-filter:blur(3px);
     background-color:rgba(0, 0, 0, 0.19);
 }
@@ -78,20 +78,20 @@ input[type="checkbox"]{
     border-radius: 3px;
 }
 
-#logInForm{
+#logInForm, .modal-content{
     display: none;
     left: 0;
     right: 0;
     align-items: center;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
  
     background-color:#C8D7E0 ;
     z-index: 99;
-    margin: 5% auto 15% auto; 
+    margin: 8% auto; 
     border: 1px solid #888;
     width: 60%; 
-    padding: 30px;
+    padding: 0.5rem;
     animation: animatezoom 0.6s
 }
     #formUser{
@@ -148,19 +148,21 @@ input[type="checkbox"]{
     flex-wrap: wrap;
     justify-content: space-evenly;
     
+    
 }
 
 .productBoxWrapper {
+    
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    width: 25vw;
+    justify-content: space-between;
+    width: 30vw;
     background-color: white;
     border-radius: 2rem;
     align-items: center;
     padding: 1.5rem;
     margin:2rem 0;
-    /* font */
+    
     color: #707070;
     font-family: cheap-pine, sans-serif;
     font-weight: 400;
@@ -168,34 +170,35 @@ input[type="checkbox"]{
     font-size: 1rem;
     
 }
-/* 
+
 .productBox {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    width: 25vw;
+    height: 90%;
     background-color: white;
-    border-radius: 2rem;
-    align-items: center;
-    padding: 1.5rem;
-    margin:2rem 0;
-     font 
-    color: #707070;
-    font-family: cheap-pine, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 1rem;
     
-} */
+    align-items: center;
+   
+    
+    
+    
+}
 
 .productBoxWrapper > .productBox > img {
     object-fit: contain;
-    max-width: 50%;
-    max-height: 50%;
+    width: 50%;
+    height: 50%;
+    
 }
 
 .addToCartBtn{
+    width: 15vw;
+    height: 10%;
     font-size: 1.2rem;
+    justify-content: center;
+    
+
   
 }
 
@@ -303,43 +306,48 @@ footer {
 
 
 /* ProductPopupDiv */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 10; /* Sit on top */
+/* .modal {
+    display: none; 
+    position: fixed;
+    z-index: 10; 
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    /* overflow: auto; */ /* Enable scroll if needed */
-    /* backdrop-filter:blur(3px); */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
-}
+    width: 100%; 
+    height: 100%; 
+     overflow: auto; 
+    backdrop-filter:blur(3px);
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.7); 
+} */
 .modal-content {
     display: flex;
-    flex-direction: column;
+    
+    /* flex-direction: column;
     align-items: center;
     background-color: white;
-    margin:15% auto; /* 15% from the top and centered */
+    margin:15% auto; 
     padding: 1.5rem;
     z-index: 11;
     border: 0.2rem solid black;
     border-radius: 2rem;
-    width: 30vw; /* Could be more or less, depending on screen size */
-    animation: animatezoom 0.6s
+    width: 30vw; 
+    animation: animatezoom 0.6s */
     
 }
-.modal-content >img {
+.modal-content > h2 {
+    
+}
+ .modal-content >img {
     object-fit: contain;
     max-width: 30%;
     max-height: 30%;
+   
 
-}
+} 
 .modal-content > p {
     font-style: italic;
-}
+} 
 
 .close {
     align-self: flex-end;
@@ -354,7 +362,7 @@ footer {
 
 
 
-      /* Responsive layout - makes a one column layout instead of a two-column layout */
+      /* Phone mediaquery */
       @media (max-width: 800px) {
         .discountContainer{
           flex-direction: column;
@@ -370,12 +378,14 @@ footer {
         header{
             padding: 0 25px ;
         }
-        .productBox {
-            width: 35vw;
-            font-size: xx-small;
+        .productBoxWrapper {
+            justify-content: space-between;
+            width: 40vw;
+            font-size: x-small;
         }
-        .productBox > button{
-            width: 30vw;
+        .addToCartBtn{
+            width: 25vw;
+            font-size: x-small;
         }
         
         .modal-content{
@@ -383,7 +393,10 @@ footer {
             width: 60vw;
         }
         .modal-content >p{
-            font-size: 0.8rem;
+            font-size: 0.7rem;
+        }
+        .modal-content > h2 {
+            font-size: 1.5rem;
         }
         #currentUser{
             display: none;
@@ -391,5 +404,13 @@ footer {
   
 
       }
+
+      /* Tablet */
+    @media screen and (max-width: 1050px){
+        .modal-content{
+            
+            margin: 30% auto;
+        }
+    }
 
 
