--- a/header.css
+++ b/header.css
@@ -19,10 +19,10 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+    /* height: 100%; */
     min-height: 8vh;
     position: relative;
-    bottom: 0px;
+    bottom: 1%;
 /*     z-index: 99;
  */}
 
@@ -151,4 +151,42 @@ header{
 
     color: black;
     text-decoration: none;
+}
+
+
+@media (max-width: 500px) {
+    
+}
+@media screen and (max-width: 800px){
+    header{
+        height: 14vh;
+      
+        
+    }
+    .growHeader{
+        display: flex;
+      
+    
+        justify-content: space-between;
+        width: 100%;
+        height: 40%;
+        
+    }
+    #headerTop{
+       flex-wrap: wrap;
+       height: 100%;
+    }
+    #headerTop > div{
+       height: 7vh;
+       width: 20vw;
+       margin: 0.3rem;
+    }
+    #headerBottom{
+        margin-top: 0.8rem;
+    }
+    
+    .showHeaderContent > h2{
+        font-size: 1.2rem;
+    }
+    
 }
