--- a/adminDash.css
+++ b/adminDash.css
@@ -17,8 +17,18 @@ main {
     flex-direction: column;
     justify-content: space-between;
     max-width: 70vw;
+    max-height: 60vh;
     padding: 10px;
     border: 1px solid black;
+    border-radius: 10px;
+    overflow-x: scroll;
+/* Hide scrollbar for IE and Edge */
+    -ms-overflow-style: none;  
+    scrollbar-width: none;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+#adminProductBox::-webkit-scrollbar {
+    display: none;
 }
 
 #adminProductWrapp {
@@ -37,6 +47,7 @@ table {
     border: hidden;
 }
 
+
 textarea {
     resize: none;
   
@@ -45,31 +56,32 @@ textarea {
 /* Styling for adminUpdatePanel */
 
 .UpdatePanelProdRow > td {
-    padding: 10px;
+    padding: 20px 10px;
     text-align:center;
+    border-radius: 5px;
+
 
 }
 
 .updatePanalTitleRow > td {
     padding: 10px;
     text-align:center;
+    border-radius: 5px;
 
 }
 .updatePanalTitleRow {
 /*     display: flex;
     flex-direction: row;
     justify-content: space-between; */
-    background-color: lightblue;
+    background-color: #C8D7E0;
     border: 1px solid black;
     
 }
 
-.UpdatePanelProdRow {
-/*     display: flex;
-    flex-direction: row;
-    justify-content: space-between; */
-    background-color: lightcoral;
-    border: 1px solid black;
+.UpdatePanelProdRow > td  {
+    background-color: #E9DADB;
+    color: #313131;
+
 
 }
 
@@ -89,6 +101,51 @@ textarea {
     min-height: 5vh;
 }
 
+.firstButtonDivStyle > button {
+    margin: 10px 0px;
+    width: 100%;
+    height: 30px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: none;
+}
+
+.firstButtonDivStyle > button:hover {
+    border-color: white;
+    background-color: 313131;
+}
+
+.firstButtonDivStyle > button:active { 
+    background-color: white;
+    border-color: white;
+
+}
+
+.secondButtonDivStyle {
+    display: flex;
+    align-items: center;
+}
+
+.secondButtonDivStyle > button {
+    width: 100%;
+    height: 100%;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: none;
+    margin: 5px;
+}
+
+.secondButtonDivStyle > button:hover {
+    border-color: black;
+    background-color: #C8D7E0;
+    color: white;
+}
+
+.secondButtonDivStyle > button:active {
+    border-color: black;
+    background-color: white;
+    color: white;
+}
 
 /* Styling for addProductPanel */
 #addProductTabel > tr > td {
