--- a/adminDash.css
+++ b/adminDash.css
@@ -1,16 +1,3 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-}
-
-/* General styling */
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100vw;
-    
-}
 
 #adminProductBox {
     display:flex;
@@ -22,7 +9,7 @@ main {
     border: 1px solid black;
     border-radius: 10px;
     overflow-x: scroll;
-/* Hide scrollbar for IE and Edge */
+    /* Hide scrollbar for IE and Edge */
     -ms-overflow-style: none;  
     scrollbar-width: none;
 }
@@ -30,17 +17,17 @@ main {
 #adminProductBox::-webkit-scrollbar {
     display: none;
 }
-
+/* 
 #adminProductWrapp {
     margin-top: 40px;
-}
+} */
 
 .adminProductBoxBtn {
     border: none;
     background-color: aquamarine;
     padding: 15px;
     border-radius: 15%;
-    margin-bottom: 10px;
+    margin: 10px 2.5px;
 } 
 
 table {
@@ -88,17 +75,19 @@ textarea {
 #editPopUpDiv {
     display: flex;
     flex-direction: column;
+    align-items: center;
     position: fixed;
     z-index: 99;
-    margin-top: 30vh;
     padding: 10px;
     border: 1px solid black;
     border-radius: 15px;
     background-color: lightblue;
+    max-width: 50vw;
 }
 
 .editPopUpInput, #editPopUpCategory {
     min-height: 5vh;
+    min-width: 100%;
 }
 
 .firstButtonDivStyle > button {
@@ -111,19 +100,23 @@ textarea {
 }
 
 .firstButtonDivStyle > button:hover {
-    border-color: white;
-    background-color: 313131;
+    border-color: black;
+    background-color: #C8D7E0;
+    color: white;
 }
 
 .firstButtonDivStyle > button:active { 
+    border-color: black;
     background-color: white;
-    border-color: white;
+    color: white;
 
 }
 
 .secondButtonDivStyle {
     display: flex;
     align-items: center;
+    height: 100%;
+    width: 100%;
 }
 
 .secondButtonDivStyle > button {
@@ -132,7 +125,8 @@ textarea {
     border: 2px solid black;
     border-radius: 5px;
     background-color: none;
-    margin: 5px;
+    margin: 10px 2px;
+    padding: 5px;
 }
 
 .secondButtonDivStyle > button:hover {
@@ -168,12 +162,12 @@ textarea {
     
 }
 /* To style uploadButton */
-#adminProductBox > div {
+/* #adminProductBox > div {
     display: flex;
     padding: 20px 10px 10px 10px;
     width: 100%;
     justify-content: space-between;
-}
+} */
 
 
 
