--- a/common.css
+++ b/common.css
@@ -58,17 +58,17 @@ h1, h2{
     backdrop-filter:blur(3px);
     background-color:rgba(0, 0, 0, 0.19);
 }
-
-input{
-    text-align: center;
+/* Dumt att göra så generell som det va från början */
+input[type="text"], input[type="number"], select, textarea{
+     
     border: solid 2px white;
     background-color: transparent;
-    width: 80%;
     height: 50px;
-    margin: 10px;
-    transition: background-color .3s
+
+     
+ transition: background-color .3s
 }
-input:focus{
+input[type="text"]:focus, input[type="number"]:focus, select:focus, textarea:focus{
     background-color: rgba(255, 255, 255, 0.616);
 }
 
@@ -129,8 +129,9 @@ input[type="checkbox"]{
 .mainWrapper{
     display: flex;
     flex-direction: column;
-/*     margin-top: 7vh;
- */   /*  height: 93vh; */
+    height: 100%;
+    margin-top: 8vh;
+
 }
 
 #productWrapper{
@@ -261,7 +262,8 @@ input[type="checkbox"]{
 
 footer {
     display: flex;
-    align-content: center;
+/*     align-content: center;
+ */    
     align-items: center;
     flex-direction: column;
     left: 0;
@@ -296,6 +298,12 @@ footer {
     display: flex;
     flex-direction: row;
 
+}
+
+#newsName, #newsEmail {
+    text-align: center;
+    margin: 10px;
+    width: 80%;
 }
 
 #anchorProduct {
