--- a/header.css
+++ b/header.css
@@ -158,35 +158,34 @@ header{
     
 }
 @media screen and (max-width: 800px){
-    header{
-        height: 14vh;
+     header{
+        justify-content: space-between;
+
       
         
-    }
+    } 
     .growHeader{
         display: flex;
-      
-    
         justify-content: space-between;
-        width: 100%;
-        height: 40%;
+        height: 50%;
         
     }
     #headerTop{
-       flex-wrap: wrap;
-       height: 100%;
+        flex-direction: column;
+        height: 100%
+}
+    .headerBox {
+        width: 60vw;
+        min-height: 5vh;
+        justify-content: center;
     }
-    #headerTop > div{
-       height: 7vh;
-       width: 20vw;
-       margin: 0.3rem;
+    .headerBox > h2 {
+        font-size: 3rem;
     }
-    #headerBottom{
-        margin-top: 0.8rem;
+
+    .headerBox:not(:last-child) {
+        margin-bottom: 10px;
     }
-    
-    .showHeaderContent > h2{
-        font-size: 1.2rem;
-    }
-    
+
+  
 }
