--- a/adminDash.css
+++ b/adminDash.css
@@ -1,4 +1,3 @@
-
 #adminProductBox {
     display:flex;
     flex-direction: column;
@@ -71,18 +70,28 @@ textarea {
 
 
 }
+.backgroundPopup{
+    display: none; 
+    position: fixed; 
+    z-index: 98; 
+    left: 0;
+    top: 0;
+    
+    width: 100%; 
+    height: 100%; 
+}
 
 #editPopUpDiv {
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: fixed;
     z-index: 99;
     padding: 10px;
     border: 1px solid black;
     border-radius: 15px;
     background-color: lightblue;
     max-width: 50vw;
+    margin: 15% auto;
 }
 
 .editPopUpInput, #editPopUpCategory {
@@ -171,11 +180,11 @@ textarea {
 
 
 
+ /* Phone mediaquery */
+ @media (max-width: 800px) {
+    #adminProductBox {
+        font-size: 0.7rem;
+        max-width: 100vw;
+    }
 
-
-
-
-
-
-
-
+ }
